# api/internal/server/server.go
@@ -151,9 +151,9 @@ func (s *Server) routes(deps dependencies) {
 	authed.DELETE("/documents/:id/grants/:grant_id", h.deleteGrant)
 	authed.POST("/documents/:id/versions", h.createVersion)
 	authed.GET("/documents/:id/versions", h.listVersions)
-	authed.GET("/versions/:id", h.getVersion)
-	authed.GET("/versions/:id/html", h.getVersionHTML)
-	authed.POST("/versions/:id/render-token", h.createRenderToken)
+	authed.GET("/documents/:id/versions/:version_id", h.getVersion)
+	authed.GET("/documents/:id/versions/:version_id/html", h.getVersionHTML)
+	authed.POST("/documents/:id/versions/:version_id/render-token", h.createRenderToken)
 	authed.POST("/documents/:id/comments", h.createComment)
 	authed.GET("/documents/:id/comments", h.listComments)
 	authed.PATCH("/documents/:id/comments/:comment_id", h.patchComment)
